étape 1 -8 low cost

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Saisie d'un nom</title>
+<title>Saisie d'une Personne</title>
 </head>
 <body>
 	<form action="bonjour" method="post">
-		<input type="text" name="nom">
+		
+		
+	
+	Nom: <input type ="text" name="nom">
+	Prénom: 	<input type="text" name="prenom">
+	
+		
+		
+		Conjoint
+		
+		Nom: <input type ="text" name="nomc">
+	Prénom: 	<input type="text" name="prenomc">
 		<input type="submit">
 	</form>
 </body>
